<resources>
    <string name="app_name">iTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Back">返回</string>
    <string name="True">确定</string>
    <string name="time_edit_title">标题</string>
    <string name="time_edit_addition">备注</string>
    <string name="time_edit_title_content">生日,纪念日,节日,考试…</string>
    <string name="time_edit_addition_content">想说的话,目标,格言…</string>
    <string name="time_edit_date">日期</string>
    <string name="time_edit_picture">图片</string>

    <string name="menu_timing">iTime</string>
    <string name="menu_tag">标签</string>
    <string name="menu_parts">小部件</string>
    <string name="menu_colors">主题色</string>
    <string name="menu_setting">设置</string>
    <string name="menu_info">关于</string>
    <string name="slogan">记录属于你的每一刻</string>
</resources>
