<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timing"
            android:icon="@drawable/ic_menu_timing"
            android:title="@string/menu_timing" />
        <item
            android:id="@+id/nav_tag"
            android:icon="@drawable/ic_menu_tag"
            android:title="@string/menu_tag" />
        <item
            android:id="@+id/nav_parts"
            android:icon="@drawable/ic_menu_parts"
            android:title="@string/menu_parts" />
        <item
            android:id="@+id/nav_colors"
            android:icon="@drawable/ic_menu_colors"
            android:title="@string/menu_colors" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_info" />
        </menu>
    </item>

</menu>
