<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_timing">

    <fragment
        android:id="@+id/nav_timing"
        android:name="com.example.itime.ui.timing.TimingFragment"
        android:label="@string/menu_timing"
        tools:layout="@layout/fragment_timing" />

    <fragment
        android:id="@+id/nav_tag"
        android:name="com.example.itime.ui.tag.TagFragment"
        android:label="@string/menu_tag"
        tools:layout="@layout/fragment_tag" />

    <fragment
        android:id="@+id/nav_parts"
        android:name="com.example.itime.ui.parts.PartsFragment"
        android:label="@string/menu_parts"
        tools:layout="@layout/fragment_parts" />

    <fragment
        android:id="@+id/nav_colors"
        android:name="com.example.itime.ui.colors.ColorsFragment"
        android:label="@string/menu_colors"
        tools:layout="@layout/fragment_colors" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.itime.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.itime.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>