<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/edit_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <EditText
            android:id="@+id/edit_title_content"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="120dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/time_edit_title_content" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="199dp"
            android:background="@drawable/shape"
            android:text="@string/Back" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="199dp"
            android:background="@drawable/shape"
            android:text="@string/True" />


        <EditText
            android:id="@+id/edit_addition_content"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="46dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/time_edit_addition_content" />

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="130dp"
            android:text="@string/time_edit_title" />

        <TextView
            android:id="@+id/edit_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="60dp"
            android:text="@string/time_edit_addition" />

    </RelativeLayout>

    <ListView
        android:id="@+id/list_view_setting"
        android:divider="#00000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>